Added tags to quote object and styles.css, added comments

--- a/css/styles.css
+++ b/css/styles.css
@@ -56,6 +56,19 @@ body {
   content: ", ";
   font-style: normal;
 }
+.tag::before {
+  content: " (tag: ";
+  font-style: normal;
+}
+
+.tag {
+  font-style: italic;
+}
+
+.tag::after {
+  content: ")";
+  font-style: normal;
+}
 
 #loadQuote {
   position: fixed;
